--- a/jevidence-client/index.html
+++ b/jevidence-client/index.html
@@ -8,6 +8,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
     <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
     <link href="css/fontello.css" rel="stylesheet" type="text/css"/>
+    <link href="css/fullcalendar.min.css" rel="stylesheet" type="text/css"/>
 
     <!-- Custom style -->
     <link href="css/select.css" rel="stylesheet" type="text/css"/>
@@ -26,9 +27,12 @@
 </head>
 <div class="splash" ng-cloak="">
     <div class="cssload-container">
-        <span class="logo"><strong><span style="color: orange;">j</span><span>Evidence</span></strong></span>
+        <row>
+            <div class="col-md-12" style="margin-top: 10px;">
+                <span class="jevidence-logo"><strong><span style="color: orange;">j</span><span style="color: #888888;">Evidence</span></strong></span>
+            </div>
+        </row>
         <div class="cssload-zenith">
-
         </div>
     </div>
 </div>
@@ -38,22 +42,24 @@
 
 <header class="header">
 
-    <nav class="navbar navbar-static-top">
-        <div class="navbar-left">
-            <ul class="nav navbar-nav">
-                <div class="row">
-                   <span class="logo"><strong><span style="color: orange; margin-left:10px;">j</span><span>Evidence</span></strong></span>
-                </div>
-
-            </ul>
-        </div>
+    <nav class="navbar navbar-static-top ">
+        <row>
+            <div class="col-md-6" style="margin-top: 10px;">
+                <span class="jevidence-logo"><strong><span style="color: orange;">j</span><span style="color: #888888;">Evidence</span></strong></span>
+            </div>
+            <div class="col-md-3"></div>
+            <div class="col-md-3"  style="margin-top: 30px; float:right;">
+                <span class="jevidence-version" style="float: right;">version 1.1</span>
+                <span class="jevidence-deploy-time"  style="float: right; margin-right: 20px;">2016-05-10 19:21:59</span>
+            </div>
+        </row>
     </nav>
 </header>
 
 <div ng-if="errorStatus === 0">
     <div class="wrapper row-offcanvas row-offcanvas-left">
         <aside class="left-side sidebar-offcanvas"
-               style="margin-top: 50px; width: 160px; border-radius: 0px 0px 6px 6px; background-color: #283744;"
+               style="position: absolute; margin-top: 50px; width: 160px; background-color: #f9fafc; bottom: 0px; height: 100%;"
                data-ng-controller="MenuCtrl">
             <section class="sidebar">
                 <ul class="sidebar-menu">
@@ -78,8 +84,14 @@
                         </a>
                     </li>
                     <li class="divider"></li>
+                    <li ng-class="{'active' : isNodeActive('/calendar')}">
+                        <a href="#/calendar" title="calendar">
+                            <i class="fa fa-calendar"></i> <span>Calendar</span>
+                        </a>
+                    </li>
+                    <li class="divider"></li>
                     <li class="treeview executions active" ng-if="!noRecords">
-                        <a href="#" title="performance" style="background-color: #283744;">
+                        <a href="#" title="performance">
                             <span><i class="fa fa-cogs"></i><span> Executions</span></span>
                             <i class="fa pull-right"></i>
                         </a>
@@ -120,7 +132,6 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="divider"></li>
                 </ul>
             </section>
         </aside>
@@ -184,6 +195,8 @@
 <script src="js/lib/angular/angular-animate.min.js" type="text/javascript"></script>
 <script src="js/lib/ui-bootstrap.min.js" type="text/javascript"></script>
 <script src="js/lib/moment/moment.js" type="text/javascript"></script>
+<script src="js/lib/fullcalendar.js" type="text/javascript"></script>
+<script src="js/lib/calendar.js" type="text/javascript"></script>
 <script src="js/lib/flot/jquery.flot.min.js" type="text/javascript"></script>
 <script src="js/lib/flot/jquery.flot.tooltip.min.js" type="text/javascript"></script>
 <script src="js/lib/flot/jquery.flot.axislabel.js" type="text/javascript"></script>
@@ -192,6 +205,8 @@
 <script src="js/lib/flot/angular.flot.js" type="text/javascript"></script>
 <script src="js/lib/select2/select.min.js" type="text/javascript"></script>
 <script src="js/lib/angular-bootstrap-lightbox/angula.bootstrap.lightbox.min.js" type="text/javascript"></script>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/qtip2/3.0.3/jquery.qtip.min.js" type="text/javascript"></script>
+
 
 <script src="js/lib/treemenu.js" type="text/javascript"></script>
 
@@ -216,6 +231,7 @@
 <script src="js/angular/controller/ExecutionDefectsCtrl.js" type="text/javascript"></script>
 <script src="js/angular/controller/ExecutionOverviewCtrl.js" type="text/javascript"></script>
 <script src="js/angular/controller/DashboardCtrl.js" type="text/javascript"></script>
+<script src="js/angular/controller/CalendarCtrl.js" type="text/javascript"></script>
 <script src="js/angular/controller/StatisticsCtrl.js" type="text/javascript"></script>
 <script src="js/angular/controller/PerformanceCtrl.js" type="text/javascript"></script>
 <script src="js/angular/controller/MenuCtrl.js" type="text/javascript"></script>
@@ -542,6 +558,23 @@
                             </tbody>
                         </table>
                     </div>
+                </div>
+            </section>
+        </div>
+    </div>
+</script>
+
+<!-- Calendar content-->
+<script type="text/ng-template" id="view/calendar.html">
+    <div data-ng-controller="CalendarCtrl" >
+        <div class="col-md-12">
+            <section class="panel">
+                <header class="panel-heading accordion-toggle" data-toggle="collapse" data-target="#calendarContainer" style="cursor: pointer;">
+                    <span style="font-weight: bold;">Calendar of executions</span>
+                    <div class="pull-right" title="Minimalize"><i class="fa container-collapse"></i></div>
+                </header>
+                <div class="panel-body in" id="calendarContainer">
+                    <div ui-calendar="uiConfig.calendar" ng-model="eventSources"></div>
                 </div>
             </section>
         </div>
@@ -1315,6 +1348,13 @@
 </script>
 
 <script src="data/settings.js" type="text/javascript"></script>
+
+<script src="data/records" type="text/javascript"></script>
+<script src="data/2016_06_07_21_55_08/execution.js" type="text/javascript"></script>
+
+<script src="data/2016_06_08_19_12_57/execution.js" type="text/javascript"></script>
+
+<script src="data/2016_06_08_21_43_20/execution.js" type="text/javascript"></script>
 
 </body>
 </html>
