--- a/jevidence-client/index.html
+++ b/jevidence-client/index.html
@@ -50,7 +50,7 @@
             <div class="col-md-3"></div>
             <div class="col-md-3"  style="margin-top: 30px; float:right;">
                 <span class="jevidence-version" style="float: right;">version 1.1</span>
-                <span class="jevidence-deploy-time"  style="float: right; margin-right: 20px;">2016-05-10 19:21:59</span>
+                <span class="jevidence-deploy-time"  style="float: right; margin-right: 20px;">JEVIDENCE_TIMESTAMP</span>
             </div>
         </row>
     </nav>
@@ -574,7 +574,7 @@
                     <div class="pull-right" title="Minimalize"><i class="fa container-collapse"></i></div>
                 </header>
                 <div class="panel-body in" id="calendarContainer">
-                    <div ui-calendar="uiConfig.calendar" ng-model="eventSources"></div>
+                    <div ui-calendar="uiConfig.calendar" class="span8 calendar" ng-model="eventSources"></div>
                 </div>
             </section>
         </div>
@@ -1348,13 +1348,6 @@
 </script>
 
 <script src="data/settings.js" type="text/javascript"></script>
-
-<script src="data/records" type="text/javascript"></script>
-<script src="data/2016_06_07_21_55_08/execution.js" type="text/javascript"></script>
-
-<script src="data/2016_06_08_19_12_57/execution.js" type="text/javascript"></script>
-
-<script src="data/2016_06_08_21_43_20/execution.js" type="text/javascript"></script>
 
 </body>
 </html>
