--- a/jevidence-client/index.html
+++ b/jevidence-client/index.html
@@ -145,6 +145,12 @@
                 <div ng-view>
                 </div>
             </section>
+
+            <footer class="footer">
+                <center>
+                    <div class="copyright"><a href="http://stypka.pl" target="_blank">© 2016 Łukasz Stypka</a></div>
+                </center>
+            </footer>
         </aside>
 
     </div>
@@ -1356,6 +1362,7 @@
 
 <script src="data/records" type="text/javascript"></script>
 
+
 <script src="data/2016_06_17_17_38_08/execution.js" type="text/javascript"></script>
 
 <script src="data/2016_06_17_17_38_18/execution.js" type="text/javascript"></script>
@@ -1365,5 +1372,18 @@
 <script src="data/2016_06_18_14_05_31/execution.js" type="text/javascript"></script>
 
 <script src="data/2016_06_18_14_05_40/execution.js" type="text/javascript"></script>
+
+<script src="data/2016_06_18_15_14_41/execution.js" type="text/javascript"></script>
+
+<script src="data/2016_06_18_15_14_48/execution.js" type="text/javascript"></script>
+
+<script src="data/2016_06_18_15_14_55/execution.js" type="text/javascript"></script>
+
+<script src="data/2016_06_18_15_15_05/execution.js" type="text/javascript"></script>
+
+<script src="data/2016_06_18_15_15_13/execution.js" type="text/javascript"></script>
+
+<script src="data/2016_06_18_15_15_29/execution.js" type="text/javascript"></script>
+
 </body>
 </html>
