--- a/jevidence-client/index.html
+++ b/jevidence-client/index.html
@@ -215,6 +215,7 @@
 <script src="js/lib/flot/angular.flot.js" type="text/javascript"></script>
 <script src="js/lib/select2.js" type="text/javascript"></script>
 <script src="js/lib/select2ui.js" type="text/javascript"></script>
+<script src="js/lib/slimscroll/jquery.slimscroll.js" type="text/javascript"></script>
 <script src="js/lib/angular-bootstrap-lightbox/angula.bootstrap.lightbox.min.js" type="text/javascript"></script>
 
 
