--- a/jevidence-client/index.html
+++ b/jevidence-client/index.html
@@ -213,6 +213,7 @@
 <script src="js/lib/flot/jquery.flot.threshold.min.js" type="text/javascript"></script>
 <script src="js/lib/flot/jquery.flot.pie.min.js" type="text/javascript"></script>
 <script src="js/lib/flot/angular.flot.js" type="text/javascript"></script>
+<script src="js/lib/echarts/echarts-all.js" type="text/javascript"></script>
 <script src="js/lib/select2.js" type="text/javascript"></script>
 <script src="js/lib/select2ui.js" type="text/javascript"></script>
 <script src="js/lib/slimscroll/jquery.slimscroll.js" type="text/javascript"></script>
@@ -273,16 +274,15 @@
                 <div class="col-md-12">
                     <section class="panel">
                         <header class="panel-heading accordion-toggle" data-toggle="collapse"
-                                data-target="#testsTrendChartDataDiv" style="cursor: pointer;">
+                                data-target="#testsTrendChartDataDashboardDiv" style="cursor: pointer;">
                             <strong>Tests trend - Last {{numberOfExecutions}} executions</strong>
 
                             <div class="pull-right" title="Minimalize"><i class="fa container-collapse"></i></div>
                         </header>
-                        <div class="panel-body in" id="testsTrendChartDataDiv" ng-controller="TestsTrendStatusChartCtrl">
+                        <div class="panel-body in" id="testsTrendChartDataDashboardDiv" ng-controller="TestsTrendStatusChartCtrl">
                             <div class="col-md-12">
                                 <div style="border: 1px solid #eee;">
-                                    <flot dataset="testsTrendChartData" options="testsTrendChartOptions" height="300px">
-                                    </flot>
+                                    <div id="testsTrendDashboardChart" style="min-height: 350px;"></div>
                                 </div>
                             </div>
                         </div>
@@ -913,13 +913,11 @@
                     <div class="pull-right" title="Minimalize"><i class="fa container-collapse"></i></div>
                 </header>
                 <div class="panel-body in" id="resultInPercentageChart" ng-controller="ResultInPercentageChartCtrl">
-                    <div class="col-md-10">
+                    <div class="col-md-12">
                         <div style="border: 1px solid #eee;">
-                            <flot dataset="resultsInPercentageChartData" options="resultsInPercentageChartOptions"
-                                  height="300px"></flot>
+                            <div id="TestResultInPercentageChartId" style="min-height: 300px;"></div>
                         </div>
                     </div>
-                    <div class="col-md-2" id="resultInPercentageChartLegend"></div>
                 </div>
             </section>
         </div>
@@ -932,13 +930,11 @@
                     <div class="pull-right"  title="Minimalize"><i class="fa container-collapse"></i></div>
                 </header>
                 <div class="panel-body in" id="testAvgNumberOfStepsChart" ng-controller="TestAvgNumberOfStepsChartCtrl">
-                    <div class="col-md-10">
+                    <div class="col-md-12">
                         <div style="border: 1px solid #eee;">
-                            <flot dataset="avgNumberOfStepsChartData" options="avgNumberOfStepsChartOptions"
-                                  height="300px"></flot>
+                            <div id="TestAvgNumberOfStepsChartId" style="min-height: 300px;"></div>
                         </div>
                     </div>
-                    <div class="col-md-2" id="avgNumberOfStepsChartLegend"></div>
                 </div>
             </section>
         </div>
@@ -954,8 +950,7 @@
                 <div class="panel-body in" id="testAvgTimeChart" ng-controller="TestAvgTimeChartCtrl">
                     <div class="col-md-12">
                         <div style="border: 1px solid #eee;">
-                            <flot dataset="testAvgTimeChartData" options="testAvgTimeChartOptions"
-                                  height="300px"></flot>
+                            <div id="TestAvgTimeChartCtrlId" style="min-height: 300px;"></div>
                         </div>
                     </div>
                 </div>
@@ -1087,7 +1082,7 @@
 
                                         <td>   <span ng-if="test.previousStatus !== 'UNKNOWN'" style="cursor: default;"  class="label label-block"
                                                      data-toggle="tooltip" data-placement="bottom"
-                                                     title="Duration: {{test.previousDuration}}"
+                                                     title="Duration: {{test.previousDuration}} ms"
                                                      ng-class="{'label-test-success' : test.previousStatus === 'SUCCESS',
                                                         'label-test-failed' : test.previousStatus === 'FAILED',
                                                         'label-test-error' : test.previousStatus === 'ERROR',
@@ -1098,7 +1093,7 @@
                                           class="label label-block label-default">Didn't exist</span>
                                         </td>
                                         <td>   <span class="label label-block" style="cursor: default;" data-toggle="tooltip" data-placement="bottom"
-                                                     title="Duration: {{test.currentDuration}}"
+                                                     title="Duration: {{test.currentDuration}} ms"
                                                      ng-class="{'label-test-success' : test.currentStatus === 'SUCCESS',
                                                         'label-test-failed' : test.currentStatus === 'FAILED',
                                                         'label-test-error' : test.currentStatus === 'ERROR',
@@ -1191,8 +1186,7 @@
                         <div class="panel-body in" id="testsTrendChartDataDiv" ng-controller="TestsTrendStatusChartCtrl">
                             <div class="col-md-12">
                                 <div style="border: 1px solid #eee;">
-                                    <flot dataset="testsTrendChartData" options="testsTrendChartOptions" height="300px">
-                                    </flot>
+                                    <div id="testsTrendDashboardChart" style="min-height: 350px;"></div>
                                 </div>
                             </div>
                         </div>
